@@ -64,6 +64,11 @@ Future Plans
 Changes Since 0.3
 =================
 
+* docutils/writers/latex2e.py:
+
+  - Changed default stylesheet to "no stylesheet" to avoid latex complaining
+    about a missing file.
+
 * docutils/__init__.py:
 
   - 0.3.1: Reorganized config file format (multiple sections); see
